# cuda-mandelbrot

./: CMakeLists.txt  main.cu  timer.hpp
cuda/: CMakeLists.txt  main.cu
opencl/: CMakeLists.txt  cl_helper.c  cl_helper.h  main.c  main.cpp  mandelbrot_data.c.in
shared/: CMakeLists.txt
